Many changes Add google analystics

--- a/about.html
+++ b/about.html
@@ -2,11 +2,22 @@
 <html lang="ko">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About - 홍익수강</title>
-  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습 페이지">
+  <meta name="author" content="HongikSugang">
+  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/mainStyle.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146466073-1');
+  </script>
 </head>
 
 <body>
@@ -25,7 +36,7 @@
       </ul>
     </nav>
     <footer id="sidebarFooter">
-      Copyright © HongikSugang 2019.<br>
+      © 2019 HongikSugang<br>
     </footer>
   </aside>
   <div id="sideOverlay"></div>
@@ -36,7 +47,7 @@
         <header>
           <h1 id="headline">About</h1>
         </header>
-        <div id="AboutImage" style="background-color: var(--lightColor);"></div>
+        <div id="AboutImage" style="background-color: #c8aae4;"></div>
       </div>
 
       <section>
