--- a/nonengineer/sugang.html
+++ b/nonengineer/sugang.html
@@ -2,11 +2,26 @@
 <html lang="ko">
 
 <head>
-  <meta http-equiv="Content-Type" content="width=device-width, initial-scale=1.0" charset="utf-8">
+  <meta charset="euc-kr">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>비공대생 연습 - 홍익수강</title>
+  <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link href="/sugang.css" rel="stylesheet" type="text/css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
+  <script>
+    {
+      const month = new Date().getMonth();
+      if (month != 1 && month != 7) location.replace("/notyet");
+    }
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146466073-1');
+  </script>
 </head>
 
 <body>
@@ -48,7 +63,7 @@
                 <tr height="90">
                   <td height="25" style='padding-left:5px'>
                     <div class="top">올클러님 환영합니다</div>
-                    <div class="top" style="margin-top:10px;"><b>최근접속:</b> 2019/08/24 07:00:18</div>
+                    <div class="top" id="loginTime" style="margin-top:10px;"><b>최근접속:</b> 2019/08/24 07:00:18</div>
 
                   </td>
                 </tr>
@@ -264,7 +279,7 @@
                       <TABLE width=660 border='0' cellpadding='0' cellspacing='0'>
                         <TR height=50 bgcolor='#eeeeee'>
                           <TH colspan=2>
-                            <h3 style="font-size:12px; color:blue;">[수강신청 방법]</h3>
+                            <h3 style="font-size:12px; color:blue;">[이용 방법]</h3>
                             <p>
                               1. 화면 왼쪽 "담은 과목 수강신청하기" 클릭 <br>
                               2. 표 아래 "수강신청" 버튼 클릭 <br><br>
@@ -297,7 +312,7 @@
             <td height="1" bgcolor="#cccccc"></td>
           </tr>
           <tr>
-            <td height=33>&nbsp;&nbsp;2020 홍익대학교 수강신청 연습</td>
+            <td height=33>&nbsp;&nbsp;홍익대학교 수강신청 연습</td>
           </tr>
         </table>
       </td>
