--- a/notyet.html
+++ b/notyet.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>주의사항 - 홍익수강</title>
+  <title>이럴수가! - 홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
@@ -45,21 +45,22 @@
     <article>
       <div id="articleInfo">
         <header>
-          <h1 id="headline" style="color: #5e2da6;">주의사항</h1>
+          <h1 id="headline" style="color: #3c2484">이럴수가!</h1>
         </header>
         <div id="AboutImage" style="background-color: #c8aae4;"></div>
       </div>
 
       <section>
-        <h5>홍익수강은 홍익대학교의 공식 웹사이트가 아닙니다. 실제 수강신청 페이지와 다를 수 있습니다. 이로 인해 발생하는 모든 일에 제작자는 책임지지 않습니다.</h5>
-        <h5>"인터넷 익스플로러" 브라우저와 "사파리" 브라우저에서 사소한 버그가 있습니다. <br>
-            "크롬" 브라우저 이용을 권장드립니다.</h5>
-        <h5>페이지에 버그가 있을 수 있습니다. 버그 또는 개선할 부분을 찾으신다면 피드백을 <a href="mailto:hongiksugang@gmail.com">hongiksugang@gmail.com</a> 으로 부탁드립니다.</h5>
-        <h5>모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 홍익대학교에 충분한 수업 개설을 요구합니다.</h5>
+        <h5>저런! 아직 수강신청 기간이 아닙니다. 새로운 모습으로 <span id="htmlMonth"></span>월에 만나요~</h5>
       </section>
     </article>
   </main>
 
+  <script>
+    const htmlMonth = document.querySelector('#htmlMonth');
+    const month = new Date().getMonth();
+    htmlMonth.innerHTML = (0 < month && month < 8) ? 8 : 2;
+  </script>
   <script src="/mainApp.js"></script>
 </body>
 
