--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@
           <h6>2019.07.19</h6> <b>~</b> <br>
           <h6>2019.08.25</h6> <b>홍익수강 공개</b> <br>
           <h6>2019.08.31</h6> <b>홍익수강 2.0 시험 버전 제작</b> <br>
+          <h6>2019.09.04</h6> <b>홍익수강 2.0 조용히 공개</b> <br>
         </p>
       </section>
     </article>
