--- a/notyet.html
+++ b/notyet.html
@@ -12,6 +12,10 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
+    {
+      const month = new Date().getMonth();
+      if (month == 1 || month == 7) location.replace("/notyet");
+    }
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
