--- a/readme.html
+++ b/readme.html
@@ -54,6 +54,7 @@
         <h5>홍익수강은 홍익대학교의 공식 웹사이트가 아닙니다. 실제 수강신청 페이지와 다를 수 있습니다. 이로 인해 발생하는 모든 일에 제작자는 책임지지 않습니다.</h5>
         <h5>"인터넷 익스플로러" 브라우저와 "사파리" 브라우저에서 사소한 버그가 있습니다. <br>
             "크롬" 브라우저 이용을 권장드립니다.</h5>
+        <h5>수강신청 연습 페이지는 2월과 8월에만 이용 가능합니다.</h5>
         <h5>페이지에 버그가 있을 수 있습니다. 버그 또는 개선할 부분을 찾으신다면 피드백을 <a href="mailto:hongiksugang@gmail.com">hongiksugang@gmail.com</a> 으로 부탁드립니다.</h5>
         <h5>모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 홍익대학교에 충분한 수업 개설을 요구합니다.</h5>
       </section>
