Add map, pc page

--- a/engineer/sugang.html
+++ b/engineer/sugang.html
@@ -8,7 +8,7 @@
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
-  <link href="/sugang.css" rel="stylesheet" type="text/css">
+  <link href="/cssjs/sugang.css" rel="stylesheet" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
@@ -319,7 +319,7 @@
     </tr>
   </table>
 
-  <script src="/sugang.js"></script>
+  <script src="/cssjs/sugang.js"></script>
 </body>
 
 </html>
