--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>홍익수강</title>
   <meta name="author" content="HongikSugang">
-  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
+  <meta name="description" content="홍익수강">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/mainStyle.css">
+  <link rel="stylesheet" href="/cssjs/mainStyle.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
@@ -32,6 +32,8 @@
   <aside id="sidebar">
     <nav id="sideNav">
       <ul id="sidebarMenu">
+        <li><a href="/map">Map</a></li>
+        <li><a href="/pc">PC실</a></li>
         <li><a href="/about" class="asdf">About</a></li>
       </ul>
     </nav>
@@ -46,9 +48,9 @@
       <a href="/readme" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
-          <h1 class="headline">주의사항</h1>
+          <h1 class="headline">공지사항</h1>
           <h2 class="subhead">
-            이용하기 전 꼭 읽어보세요
+            꼭 읽어보세요
           </h2>
         </header>
         <h5 class="sectionDate"></h5>
@@ -60,7 +62,7 @@
       <a href="/engineer/sugang" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
-          <h1 class="headline">공대용</h1>
+          <h1 class="headline">공대 수강신청</h1>
           <h2 class="subhead">
             공과대학 학생이라면 여기를 누르세요
           </h2>
@@ -74,7 +76,7 @@
       <a href="/nonengineer/sugang" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
-          <h1 class="headline">비공대용</h1>
+          <h1 class="headline">비공대 수강신청</h1>
           <h2 class="subhead">
             자율전공을 포함해 공과대학 학생이 아니라면 여기를 누르세요
           </h2>
@@ -85,7 +87,7 @@
     </section>
   </main>
 
-  <script src="/mainApp.js"></script>
+  <script src="/cssjs/mainApp.js"></script>
 </body>
 
 </html>
