--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - 홍익수강</title>
+  <title>학교 지도 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
@@ -47,26 +47,25 @@
     <article>
       <div id="articleInfo">
         <header>
-          <h1 id="headline">About</h1>
+          <h1 id="headline">학교 지도</h1>
         </header>
         <div id="AboutImage" style="
         background: #decbef;
-        background: linear-gradient(165deg, #decbef 0%, #c8aae4 25%, #a366d3 100%);"></div>
+        background: linear-gradient(130deg, #decbef 0%, #c8aae4 45%, #a366d3 100%);"></div>
       </div>
 
       <section>
+        <h3>홍그와트</h3>
         <p>
-          <h6>2019.08.24</h6> <b>~</b> <br>
-          <h6>2019.08.25</h6> <b>수강신청 연습하는 사이트 공개</b> <br>
-          <h6>2019.08.31</h6> <b>홍익수강 시험 버전 제작</b> <br>
-          <h6>2019.09.04</h6> <b>홍익수강 공개</b> <br>
-          <h6>2019.09.12</h6>
-          <b>학교 지도, PC실 위치 추가</b>
+          이곳은 겉모습은 평범해 보이지만, 그 안은 미로처럼 얽혀 있어 주변 지리에 밝은 사람조차 길을 헤매게 만드는 곳이다. 몇몇 탐험가들이 만든 지도가 이곳을 지나다니는 많은 사람이 길을 잃지 않게 해주었으나 오랜 세월이 흘러 이젠 지도를 봐도 알 수 없는 건물과 길이 많이 생겼다. 이에 본인은 이전에 존재하던 지도를 참고하여 이곳의 지도를 새로 만들었다. 그러나, 이 지도 또한 실제와 다른 부분이 있을 수 있다. 이러한 부분을 발견할 경우 제작자에게 알려주거나, 너무 오랜 세월이 지났을 경우 직접 수정하여 다른 사람이 길을 헤매지 않게 도움을 줄 수 있기를 바란다. *이 지도를 외부로 유출하는 일은 없어야 할 것이다. <br> <br>
+          <b>- 2019년 9월 12일</b>
         </p>
+        <h4><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/open?id=1wxnuPHpsFG_sbWylQS9VuVqmkHiFvlUP">지도 내려받기</a></h4>
+        <img src="image/map/lightmap.png" alt="HongikMapLight">
+        <img src="image/map/darkmap.png" alt="HongikMapDark">
       </section>
     </article>
   </main>
-
   <script src="/cssjs/mainApp.js"></script>
 </body>
 
