--- a/readme.html
+++ b/readme.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>주의사항 - 홍익수강</title>
+  <title>공지사항 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
-  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
+  <meta name="description" content="홍익수강">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/mainStyle.css">
+  <link rel="stylesheet" href="/cssjs/mainStyle.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
@@ -32,6 +32,8 @@
   <aside id="sidebar">
     <nav id="sideNav">
       <ul id="sidebarMenu">
+        <li><a href="/map">Map</a></li>
+        <li><a href="/pc">PC실</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
@@ -45,23 +47,33 @@
     <article>
       <div id="articleInfo">
         <header>
-          <h1 id="headline" style="color: #5e2da6;">주의사항</h1>
+          <h1 id="headline">공지사항</h1>
         </header>
-        <div id="AboutImage" style="background-color: #c8aae4;"></div>
+        <div id="AboutImage" style="
+        background: #3c2484;
+        background: linear-gradient(25deg, #3c2484 0%, #a366d3 60%, #c8aae4 100%);
+      "></div>
       </div>
 
       <section>
-        <h5>홍익수강은 홍익대학교의 공식 웹사이트가 아닙니다. 실제 수강신청 페이지와 다를 수 있습니다. 이로 인해 발생하는 모든 일에 제작자는 책임지지 않습니다.</h5>
-        <h5>"인터넷 익스플로러" 브라우저와 "사파리" 브라우저에서 사소한 버그가 있습니다. <br>
-            "크롬" 브라우저 이용을 권장드립니다.</h5>
-        <h5>수강신청 연습 페이지는 2월과 8월에만 이용 가능합니다.</h5>
-        <h5>페이지에 버그가 있을 수 있습니다. 버그 또는 개선할 부분을 찾으신다면 피드백을 <a href="mailto:hongiksugang@gmail.com">hongiksugang@gmail.com</a> 으로 부탁드립니다.</h5>
-        <h5>모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 홍익대학교에 충분한 수업 개설을 요구합니다.</h5>
+        <h3>홍익수강</h3>
+        <h4>홍익수강은 홍익대학교의 공식 웹사이트가 아닙니다. 실제 수강신청 페이지와 다를 수 있습니다. 이로 인해 발생하는 모든 일에 제작자는 책임지지 않습니다.</h4>
+        <h4>"인터넷 익스플로러" 브라우저와 "사파리" 브라우저에서 사소한 버그가 있습니다. <br>
+          "크롬" 브라우저 이용을 권장드립니다.</h4>
+        <h4>모든 종류의 피드백을 환영합니다. 피드백을 <a href="mailto:hongiksugang@gmail.com">hongiksugang@gmail.com</a> 으로 보내주세요.</h4>
+        <h3>수강신청 연습</h3>
+        <h4>수강신청 연습 페이지는 2월과 8월에만 이용 가능합니다.</h4>
+        <h4>모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 홍익대학교에 충분한 수업 개설을 요구합니다.</h4>
+        <h3>학교 지도</h3>
+        <h4>2011년 홍익대학교 시각디자인과 RRRproject에서 만든 "홍그와트 지도"를 참고하여 만들었습니다.</h4>
+        <h4>실제와 다를 수 있습니다.</h4>
+        <h3>PC실</h3>
+        <h4>실제 PC실 정보와 다를 수 있습니다.</h4>
       </section>
     </article>
   </main>
 
-  <script src="/mainApp.js"></script>
+  <script src="/cssjs/mainApp.js"></script>
 </body>
 
 </html>
