--- a/pc.html
+++ b/pc.html
@@ -62,6 +62,7 @@
         <h5>R524</h5> <h6>홍문관 5층</h6> <br>
         <h5>R915</h5> <h6>홍문관 9층</h6> <br>
         <h5>K611</h5> <h6>제1공학관 6층</h6> <br>
+        <h5>G6</h5> <h6>학생회관 6층</h6> <br>
         <h5>Q101</h5> <h6>정보통신센터 1층</h6> <br>
         <h5>F101</h5> <h6>미술학관 1층</h6> <br>
         <h5>Z2-601</h5> <h6>이천득관 6층</h6> <br>
@@ -69,9 +70,6 @@
 
         <h3>컬러 프린트를 해야 한다면?</h3>
         <h4>학생회관 1층 (유료)</h4>
-
-        <h3>단과대 전용 PC실</h3>
-        <h4>몰라 알려줘</h4>
       </section>
     </article>
   </main>
