--- a/map.html
+++ b/map.html
@@ -57,7 +57,7 @@
       <section>
         <h3>홍그와트</h3>
         <p>
-          이곳은 겉모습은 평범해 보이지만, 그 안은 미로처럼 얽혀 있어 주변 지리에 밝은 사람조차 길을 헤매게 만드는 곳이다. 몇몇 탐험가들이 만든 지도가 이곳을 지나다니는 많은 사람이 길을 잃지 않게 해주었으나 오랜 세월이 흘러 이젠 지도를 봐도 알 수 없는 건물과 길이 많이 생겼다. 이에 본인은 이전에 존재하던 지도를 참고하여 이곳의 지도를 새로 만들었다. 그러나, 이 지도 또한 실제와 다른 부분이 있을 수 있다. 이러한 부분을 발견할 경우 제작자에게 알려주거나, 너무 오랜 세월이 지났을 경우 직접 수정하여 다른 사람이 길을 헤매지 않게 도움을 줄 수 있기를 바란다. *이 지도를 외부로 유출하는 일은 없어야 할 것이다. <br> <br>
+          이곳은 겉모습은 평범해 보이지만, 그 안은 미로처럼 얽혀 있어 주변 지리에 밝은 사람조차 길을 헤매게 만드는 곳이다. 몇몇 탐험가들이 만든 지도가 이곳을 지나다니는 많은 사람이 길을 잃지 않게 해주었으나 오랜 세월이 흘러 이젠 지도를 봐도 알 수 없는 건물과 길이 많이 생겼다. 이에 본인은 이전에 존재하던 지도를 참고하여 이곳의 지도를 새로 만들었다. 그러나, 이 지도 또한 실제와 다른 부분이 있을 수 있다. 이러한 부분을 발견할 경우 제작자에게 알려주거나, 너무 오랜 세월이 지났을 경우 직접 수정하여 다른 사람이 길을 헤매지 않게 도움을 줄 수 있기를 바란다.
           <b>- 2019년 9월 12일</b>
         </p>
         <h4><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/open?id=1wxnuPHpsFG_sbWylQS9VuVqmkHiFvlUP">지도 내려받기</a></h4>
