--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   <title>홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강">
+  <meta name="theme-color" content="#C8AAE4">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="홍익수강">
+  <meta property="og:description" content="홍익대학교 수강신청 연습">
+  <meta property="og:image" content="/image/hongiksugang.png">
+  <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/cssjs/mainStyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
@@ -21,12 +28,13 @@
 </head>
 
 <body>
+  <input type="checkbox" id="toggleMenu">
   <nav id="topNav">
     <a href="/" id="logo"></a>
-    <div id="toggleSidebar">
-      <span></span>
-      <span></span>
-    </div>
+    <label id="toggleSidebar" for="toggleMenu">
+      <span class="wrap"><span class="line"></span></span>
+      <span class="wrap"><span class="line"></span></span>
+    </label>
   </nav>
 
   <aside id="sidebar">
@@ -38,7 +46,7 @@
       </ul>
     </nav>
     <footer id="sidebarFooter">
-      © 2019 HongikSugang<br>
+      © 2019-2020 HongikSugang<br>
     </footer>
   </aside>
   <div id="sideOverlay"></div>
@@ -59,27 +67,11 @@
     </section>
 
     <section class="sectionWrapper">
-      <a href="/engineer/sugang" class="sectionLink"></a>
+      <a href="/sugang/sugang" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
-          <h1 class="headline">공대 수강신청</h1>
-          <h2 class="subhead">
-            공과대학 학생이라면 여기를 누르세요
-          </h2>
-        </header>
-        <h5 class="sectionDate"></h5>
-      </div>
-      <div class="sectionBackground"></div>
-    </section>
-
-    <section class="sectionWrapper">
-      <a href="/nonengineer/sugang" class="sectionLink"></a>
-      <div class="sectionInfo">
-        <header>
-          <h1 class="headline">비공대 수강신청</h1>
-          <h2 class="subhead">
-            자율전공을 포함해 공과대학 학생이 아니라면 여기를 누르세요
-          </h2>
+          <h1 class="headline">수강신청 연습</h1>
+          <h2 class="subhead"></h2>
         </header>
         <h5 class="sectionDate"></h5>
       </div>
