--- a/sugang/click.html
+++ b/sugang/click.html
@@ -4,9 +4,15 @@
 <head>
   <meta charset="euc-kr">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>비공대생 연습 - 홍익수강</title>
+  <title>수강신청 연습 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
+  <meta name="theme-color" content="#C8AAE4">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="홍익수강">
+  <meta property="og:description" content="홍익대학교 수강신청 연습">
+  <meta property="og:image" content="/image/hongiksugang.png">
+  <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link href="/cssjs/sugang.css" rel="stylesheet" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -32,7 +38,7 @@
         <table cellspacing="0" cellpadding="0" border="0" width=100%>
           <tr>
             <td height=53 style='padding-left:10px;'>
-              <a href="./sugang"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습 2.0</b></span></a>
+              <a href="./sugang"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습</b></span></a>
               <a href="/" id="logo"></a>
             </td>
           </tr>
