--- a/sugang/sugang.html
+++ b/sugang/sugang.html
@@ -4,9 +4,15 @@
 <head>
   <meta charset="euc-kr">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>공대생 연습 - 홍익수강</title>
+  <title>수강신청 연습 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
+  <meta name="theme-color" content="#C8AAE4">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="홍익수강">
+  <meta property="og:description" content="홍익대학교 수강신청 연습">
+  <meta property="og:image" content="/image/hongiksugang.png">
+  <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link href="/cssjs/sugang.css" rel="stylesheet" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -32,11 +38,11 @@
         <table cellspacing="0" cellpadding="0" border="0" width=100%>
           <tr>
             <td height=53 style='padding-left:10px;'>
-              <a href="./sugang"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습 2.0</b></span></a>
+              <a href="./sugang"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습</b></span></a>
               <a href="/" id="logo"></a>
             </td>
           </tr>
-          <tr height=25 bgcolor="#3c2484">
+          <tr height=25 bgcolor="#c8aae4">
             <td></td>
           </tr>
           <tr>
@@ -63,7 +69,7 @@
                 <tr height="90">
                   <td height="25" style='padding-left:5px'>
                     <div class="top">올클러님 환영합니다</div>
-                    <div class="top" id="loginTime" style="margin-top:10px;"><b>최근접속:</b> 20xx/0x/xx xx:xx:xx</div>
+                    <div class="top" id="loginTime" style="margin-top:10px;"><b>최근접속:</b> 2019/08/24 07:00:18</div>
 
                   </td>
                 </tr>
@@ -169,7 +175,7 @@
 
                       <tr align=left>
                         <td height=30>
-                          <a href="/engineer/click">&nbsp;&nbsp;- 담은 과목 수강신청하기</a>
+                          <a href="/sugang/click">&nbsp;&nbsp;- 담은 과목 수강신청하기</a>
                         </td>
                       </tr>
                       <tr>
@@ -312,7 +318,7 @@
             <td height="1" bgcolor="#cccccc"></td>
           </tr>
           <tr>
-            <td height=33>&nbsp;&nbsp;홍익대학교 공과대학 수강신청 연습</td>
+            <td height=33>&nbsp;&nbsp;홍익대학교 수강신청 연습</td>
           </tr>
         </table>
       </td>
