--- a/notyet.html
+++ b/notyet.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="/cssjs/mainStyle.css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
     // {
@@ -69,7 +70,7 @@
       </section>
     </article>
   </main>
-
+  
   <script>
     const htmlMonth = document.querySelector('#htmlMonth');
     const month = new Date().getMonth();
