--- a/sugang/click.html
+++ b/sugang/click.html
@@ -16,6 +16,7 @@
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link href="/cssjs/sugang.css" rel="stylesheet" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
     {
