Randomize the number of subjects

--- a/notyet.html
+++ b/notyet.html
@@ -18,12 +18,9 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
   <script>
-    // {
-    //   const month = new Date().getMonth();
-    //   if (month == 1 || month == 7) location.replace("/");
-    // }
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
@@ -76,7 +73,6 @@
     const month = new Date().getMonth();
     htmlMonth.innerHTML = (0 < month && month < 8) ? 8 : 2;
   </script>
-  <script src="/cssjs/mainApp.js"></script>
 </body>
 
 </html>
