--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
+  <script defer src="/cssjs/mainApp.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -84,8 +85,6 @@
       </section>
     </article>
   </main>
-
-  <script src="/cssjs/mainApp.js"></script>
 </body>
 
 </html>
