--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
+  <script defer src="/cssjs/mainApp.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -68,7 +69,7 @@
     </section>
 
     <section class="sectionWrapper">
-      <a href="/sugang/sugang" class="sectionLink"></a>
+      <a href="/sugang/main" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
           <h1 class="headline">수강신청 연습</h1>
@@ -79,8 +80,6 @@
       <div class="sectionBackground"></div>
     </section>
   </main>
-  
-  <script src="/cssjs/mainApp.js"></script>
 </body>
 
 </html>
