--- a/sugang/main.html
+++ b/sugang/main.html
@@ -18,6 +18,7 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
+  <script defer src="/cssjs/sugang.js"></script>
   <script>
     {
       const month = new Date().getMonth();
@@ -325,8 +326,6 @@
       </td>
     </tr>
   </table>
-
-  <script src="/cssjs/sugang.js"></script>
 </body>
 
 </html>
