Fix bug and add log

--- a/sugang/click.html
+++ b/sugang/click.html
@@ -167,7 +167,7 @@
 
                       <tr align=left>
                         <td height=30>
-                          <a href="/click">&nbsp;&nbsp;- 담은 과목 수강신청하기</a>
+                          <a href="/sugang/click">&nbsp;&nbsp;- 담은 과목 수강신청하기</a>
                         </td>
                       </tr>
                       <tr>
