--- a/about.html
+++ b/about.html
@@ -80,7 +80,9 @@
           <h2 class="date">2019.09.26</h2>
           <b>지도 수정</b> <br>
           <h2 class="date">2020.02.01</h2>
-          <b>2020년 1학기 버전 공개</b>
+          <b>2020년 1학기 버전 공개</b> <br>
+          <h2 class="date">2020.07.06</h2>
+          <b>무작위 수강신청 과목 수 추가</b>
         </p>
       </section>
     </article>
